--- a/addons/dialogue_manager/l10n/en.po
+++ b/addons/dialogue_manager/l10n/en.po
@@ -5,7 +5,7 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: de\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -107,6 +107,15 @@ msgstr "End dialogue"
 
 msgid "generate_line_ids"
 msgstr "Generate line IDs"
+
+msgid "use_uuid_only_for_ids"
+msgstr "Use UUID only for IDs"
+
+msgid "set_id_prefix_length"
+msgstr "Set ID prefix length"
+
+msgid "id_prefix_length"
+msgstr "ID prefix length:"
 
 msgid "save_characters_to_csv"
 msgstr "Save character names to CSV..."
@@ -323,6 +332,12 @@ msgstr "Concurrent lines need an origin line that doesn't start with \"| \"."
 
 msgid "errors.goto_not_allowed_on_concurrect_lines"
 msgstr "Goto references are not allowed on concurrent dialogue lines."
+
+msgid "errors.unexpected_syntax_on_nested_dialogue_line"
+msgstr "Nested dialogue lines may only contain dialogue."
+
+msgid "errors.err_nested_dialogue_invalid_jump"
+msgstr "Only the last line of nested dialogue is allowed to include a jump."
 
 msgid "errors.unknown"
 msgstr "Unknown syntax."
