--- a/addons/dialogue_manager/l10n/translations.pot
+++ b/addons/dialogue_manager/l10n/translations.pot
@@ -101,6 +101,15 @@ msgstr ""
 msgid "generate_line_ids"
 msgstr ""
 
+msgid "use_uuid_only_for_ids"
+msgstr ""
+
+msgid "set_id_prefix_length"
+msgstr ""
+
+msgid "id_prefix_length"
+msgstr ""
+
 msgid "save_to_csv"
 msgstr ""
 
@@ -312,6 +321,12 @@ msgid "errors.concurrent_line_without_origin"
 msgstr ""
 
 msgid "errors.goto_not_allowed_on_concurrect_lines"
+msgstr ""
+
+msgid "errors.unexpected_syntax_on_nested_dialogue_line"
+msgstr ""
+
+msgid "errors.err_nested_dialogue_invalid_jump"
 msgstr ""
 
 msgid "errors.unknown"
